--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,54 +8,55 @@
 </head>
 <body>
     <h1>Table</h1>
-   <table border="1">
-    <thead>
-    <tr>
-        <th >Time</th>
-        <th colspan="3">Department</th>
-        <th>Section</th>
-        <th>Roll no.</th>
-        <th>Name</th>
-    </tr>
-    <tr>
-        <th>Monday</th>
-        <th>Tuesday</th>
-        <th colspan="2">Wednesday</th>
-        <th colspan="2">Thursday</th>
-        <th>Friday</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td rowspan="2">Btech</td>
-        <td>BCA</td>
-        <td rowspan="2">BBA</td>
-        <td rowspan="2">HM</td>
-        <td rowspan="2">BA</td>
-        <td rowspan="2">Pharmacy</td>
-        <td rowspan="2">LLB</td> 
-    </tr>
-    <tr>
-        <td>MCA</td>
-    </tr>
-    <tr>
-        <td>Math</td>
-        <td>English</td>
-        <td>Java</td>
-        <td>AI</td>
-        <td>C++</td>
-        <td>OOPS</td>
-        <td>Operting System</td>
-    </tr>
-    <tr>
-        <td>Projects</td>
-        <td class="Main"></td>
-        <td class="Main"></td>
-        <td class="Main"></td>
-        <td class="Main"></td>
-        <td class="Main"></td>
-        <td>Practical</td>
-    </tr>
-    </tbody>
-   </table> 
-          </body>
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Time</th>
+                <th colspan="3">Department</th>
+                <th>Section</th>
+                <th>Roll no.</th>
+                <th>Name</th>
+            </tr>
+            <tr>
+                <th>Monday</th>
+                <th>Tuesday</th>
+                <th colspan="2">Wednesday</th>
+                <th colspan="2">Thursday</th>
+                <th>Friday</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td rowspan="2">Btech</td>
+                <td>BCA</td>
+                <td rowspan="2">BBA</td>
+                <td rowspan="2">HM</td>
+                <td rowspan="2">BA</td>
+                <td rowspan="2">Pharmacy</td>
+                <td rowspan="2">LLB</td> 
+            </tr>
+            <tr>
+                <td>MCA</td>
+            </tr>
+            <tr>
+                <td>Math</td>
+                <td>English</td>
+                <td>Java</td>
+                <td>AI</td>
+                <td>C++</td>
+                <td>OOPS</td>
+                <td>Operating System</td>
+            </tr>
+            <tr>
+                <td>Projects</td>
+                <td class="Main"></td>
+                <td class="Main"></td>
+                <td class="Main"></td>
+                <td class="Main"></td>
+                <td class="Main"></td>
+                <td>Practical</td>
+            </tr>
+        </tbody>
+    </table>
+</body>
+</html>
